spring-petclinic-visits-service/visits-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: visits-service-ingress
  labels:
    app: visits-service
spec:
  rules:
  - host: hello-world1.info
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /api/visit(/|$)(.*)
        backend:
          service:
            name: visits-service
            port:
              number: 8082
